--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@dicebear/avatars": "^4.10.7",
+    "@dicebear/collection": "^5.1.2",
+    "@dicebear/core": "^5.1.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.16",
